@@ -108,6 +108,22 @@ name|caffeine
 operator|.
 name|cache
 operator|.
+name|RemovalCause
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|github
+operator|.
+name|benmanes
+operator|.
+name|caffeine
+operator|.
+name|cache
+operator|.
 name|RemovalListener
 import|;
 end_import
@@ -455,6 +471,8 @@ argument_list|(
 name|blockCacheKey
 argument_list|,
 name|blockCacheLocation
+argument_list|,
+name|removalCause
 argument_list|)
 decl_stmt|;
 name|cache
@@ -511,6 +529,9 @@ name|blockCacheKey
 parameter_list|,
 name|BlockCacheLocation
 name|location
+parameter_list|,
+name|RemovalCause
+name|removalCause
 parameter_list|)
 block|{
 if|if
@@ -580,6 +601,14 @@ name|blockCacheKey
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|removalCause
+operator|.
+name|wasEvicted
+argument_list|()
+condition|)
+block|{
 name|metrics
 operator|.
 name|blockCacheEviction
@@ -587,6 +616,7 @@ operator|.
 name|incrementAndGet
 argument_list|()
 expr_stmt|;
+block|}
 name|metrics
 operator|.
 name|blockCacheSize
